# DataFrameSampler

./: .gitignore  LICENSE  README.md  TODO.md  dataframe_sampler.py  dataframe_sampler_notebook.ipynb  pyproject.toml  requirements.txt
docs/: llm_skill.md  numeric_projection.md  vectorizing_columns_prompt.md
experiments/: .gitignore  README.md  __init__.py  baselines.py  compare.py  datasets.py  deep_reference.py  download_datasets.py  exploration.py  imbalance_validation.py  instrumentation.py  make_tables.py  manifold_validation.py  mechanism_validation.py  metrics.py  numeric_projection.py  parameter_sensitivity.py  plot_results.py  predictive.py  primary_uncertainty.py  proposed_setups.py  run_deep_reference.py  sensitivity_validation.py  synthetic_data.py  two_dimensional.py  vectorization_plan.py  workflow.py
experiments/data/: README.md
experiments/descriptions/: README.md
experiments/notebooks/: adult.ipynb  adult_parameter_sensitivity.ipynb  bank_marketing.ipynb  baseline_numeric_projection_triptychs.ipynb  covertype.ipynb  (+7 more)
publication/: README.md  british_language.md  main.tex  references.bib  style_compiler.md
tests/: test_dataframe_sampler.py  test_deep_reference.py  test_experiment_baselines.py  test_experiment_exploration.py  test_experiment_metrics.py  test_experiment_predictive.py  test_experiment_workflow.py  test_imbalance_validation.py  test_manifold_validation.py  test_mechanism_validation.py  test_numeric_projection.py  test_parameter_sensitivity.py  test_sensitivity_validation.py  test_synthetic_data.py  test_two_dimensional_experiments.py
(+55 files in other folders)
